--- a/src/Game.css
+++ b/src/Game.css
@@ -10,6 +10,18 @@ ol, ul {
 .game {
   height: 600px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.weather-container {
+  padding-bottom: 50px;
+  height: 20px;
+}
+
+.game-container {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -45,11 +57,6 @@ ol, ul {
 
 .kbd-navigation .square:focus {
   background: #ddd;
-}
-
-.game {
-  display: flex;
-  flex-direction: row;
 }
 
 .game-info {
